--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ecfefe;"
+    background-color: #ecfcf7;"
 
 }
 
@@ -13,7 +13,7 @@ p{
 
 th{
     
-    color:#56a4a4;
+    color:#5e9393;
 } 
 td{
     color:#6f4715;
@@ -29,7 +29,7 @@ strong{
 color:#5e9393;
   }
 h4{
-    color:#66bfbf;
+    color:#5e9393;
 }
   hr{
     
